# create-googleform-from-html

./: Cargo.toml  README.html  README.md  curl_google_forms_api_get.sh  my_setup.sh  progress.md  set_git_name_email.sh  tamesi.html  tamesi.md
src/: googleform_to_html.rs  lib.rs  main.rs  models.rs  modules.rs
src/googleform_to_html/: fetch_google_forms.rs
src/models/: google_form.rs  html_form.rs  markdown_form.rs
src/modules/: authentication.rs  googleform_to_html.rs  html_to_googleform.rs  input.rs  markdown_to_html.rs  output.rs
src/modules/googleform_to_html/: fetch_google_forms.rs
src/modules/html_to_googleform/: create_google_forms.rs  htmlform_to_googleform.rs
src/modules/input/: fetch_google_forms.rs
src/modules/output/: create_google_forms.rs
tmp/: note.md
tmp/note/: 20241130.md  sample_response.md
