[package]
name = "marksurvey"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
dotenv = "0.15.0"
html-builder = "0.5.1"
oauth2 = "4.4.2"
pulldown-cmark = "0.12.2"
reqwest = { version = "0.12.9", features = ["json"] }
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
